--- a/port/src/input.css
+++ b/port/src/input.css
@@ -10,6 +10,22 @@
     h1{
         font-family: 'Teko', sans-serif;
     }
+    html{
+      font-family: 'Oswald', sans-serif;
+    }
+    @keyframes blink {
+      0%, 100% {
+        opacity: 1;
+      }
+      20% {
+        opacity: 0;
+      }
+    }
+    
+    .animate-blink {
+      animation: blink 3s infinite;
+    }
+    
     .social-icon:hover {
         filter: invert(24%) sepia(15%) saturate(3605%) hue-rotate(292deg) brightness(91%) contrast(105%);
       }
@@ -27,7 +43,5 @@
         }
       }
       
-      .bounce-animation {
-        animation: bounce 0.75s ease-in-out;
-      }
+  
 }
